title changed to pastiche

--- a/templates/dada/index.html
+++ b/templates/dada/index.html
@@ -1,11 +1,11 @@
 {% extends "dada/base.html" %}
 
 {% block title %}
-	production files am51584
+	pastiche
 {% endblock %}
 
 {% block header %}
-	production files am51584
+	pastiche
 {% endblock %}
 
 {% block content %}
