--- a/templates/dada/index.html
+++ b/templates/dada/index.html
@@ -12,16 +12,38 @@
 	<h1>Items</h1>
 	{% if items %}
 		<table border=1 cellspacing=0 cellpadding=3>
-		{% for item in items %}
-			<tr>
-				<td>{{ item.id }}</td>
-				<td>{{ item.title }}</td>
-				<td>{{ item.rating }}</td>
-				<td>{{ item.private }}</td>
-				<td>{{ item.user }}</td>
-				<td>{{ item.date }}</td>
-			</tr>
-		{% endfor %}
+			<thead>
+				<td>id</td>
+				<td>title</td>
+				<td>rating</td>
+				<td>private</td>
+				<td>user</td>
+				<td>date</td>
+				<td>notes</td>
+				<td>links</td>
+			</thead>
+			<tbody>
+				{% for item in items %}
+					<tr>
+						<td>{{ item.id }}</td>
+						<td>{{ item.title }}</td>
+						<td>{{ item.rating }}</td>
+						<td>{{ item.private }}</td>
+						<td>{{ item.user }}</td>
+						<td>{{ item.date }}</td>
+						<td>
+							{% if item.notes %}
+								{{ item.notes.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if item.links %}
+								{{ item.links.all|length }}
+							{% endif %}
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
 		</table>
 	{% else %}
 		<p>No items are available.</p>
@@ -30,18 +52,46 @@
 	<h1>Tasks</h1>
 	{% if tasks %}
 		<table border=1 cellspacing=0 cellpadding=3>
-		{% for task in tasks %}
-			<tr>
-				<td>{{ task.id }}</td>
-				<td>{{ task.title }}</td>
-				<td>{{ task.rating }}</td>
-				<td>{{ task.private }}</td>
-				<td>{{ task.user }}</td>
-				<td>{{ task.date }}</td>
-				<td>{{ task.done }}</td>
-				<td>{{ task.due }}</td>
-			</tr>
-		{% endfor %}
+			<thead>
+				<td>id</td>
+				<td>title</td>
+				<td>rating</td>
+				<td>private</td>
+				<td>user</td>
+				<td>date</td>
+				<td>done</td>
+				<td>due</td>
+				<td>notes</td>
+				<td>links</td>
+				<td>children</td>
+			</thead>
+			<tbody>
+				{% for task in tasks %}
+					<tr>
+						<td>{{ task.id }}</td>
+						<td>{{ task.title }}</td>
+						<td>{{ task.rating }}</td>
+						<td>{{ task.private }}</td>
+						<td>{{ task.user }}</td>
+						<td>{{ task.date }}</td>
+						<td>{{ task.done }}</td>
+						<td>{{ task.due }}</td>
+						<td>
+							{% if task.notes %}
+								{{ task.notes.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if task.links %}
+								{{ task.links.all|length }}
+							{% endif %}
+						</td>
+						<td>
+								{{ task.children.all|length }}
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
 		</table>
 	{% else %}
 		<p>No tasks are available.</p>
@@ -50,18 +100,48 @@
 	<h1>Events</h1>
 	{% if events %}
 		<table border=1 cellspacing=0 cellpadding=3>
-		{% for event in events %}
-			<tr>
-				<td>{{ event.id }}</td>
-				<td>{{ event.title }}</td>
-				<td>{{ event.rating }}</td>
-				<td>{{ event.private }}</td>
-				<td>{{ event.user }}</td>
-				<td>{{ event.date }}</td>
-				<td>{{ event.start }}</td>
-				<td>{{ event.stop }}</td>
-			</tr>
-		{% endfor %}
+			<thead>
+				<td>id</td>
+				<td>title</td>
+				<td>rating</td>
+				<td>private</td>
+				<td>user</td>
+				<td>date</td>
+				<td>start</td>
+				<td>stop</td>
+				<td>notes</td>
+				<td>links</td>
+				<td>children</td>
+			</thead>
+			<tbody>
+				{% for event in events %}
+					<tr>
+						<td>{{ event.id }}</td>
+						<td>{{ event.title }}</td>
+						<td>{{ event.rating }}</td>
+						<td>{{ event.private }}</td>
+						<td>{{ event.user }}</td>
+						<td>{{ event.date }}</td>
+						<td>{{ event.start }}</td>
+						<td>{{ event.stop }}</td>
+								<td>
+									{% if event.notes %}
+										{{ event.notes.all|length }}
+									{% endif %}
+								</td>
+								<td>
+									{% if event.links %}
+										{{ event.links.all|length }}
+									{% endif %}
+								</td>
+								<td>
+									{% if event.children %}
+										{{ event.children.all|length }}
+									{% endif %}
+								</td>
+					</tr>
+				{% endfor %}
+			</tbody>
 		</table>
 	{% else %}
 		<p>No events are available.</p>
