added views for notes and links

--- a/templates/dada/index.html
+++ b/templates/dada/index.html
@@ -124,26 +124,110 @@
 						<td>{{ event.date }}</td>
 						<td>{{ event.start }}</td>
 						<td>{{ event.stop }}</td>
-								<td>
-									{% if event.notes %}
-										{{ event.notes.all|length }}
-									{% endif %}
-								</td>
-								<td>
-									{% if event.links %}
-										{{ event.links.all|length }}
-									{% endif %}
-								</td>
-								<td>
-									{% if event.children %}
-										{{ event.children.all|length }}
-									{% endif %}
-								</td>
+						<td>
+							{% if event.notes %}
+								{{ event.notes.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if event.links %}
+								{{ event.links.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if event.children %}
+								{{ event.children.all|length }}
+							{% endif %}
+						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 	{% else %}
 		<p>No events are available.</p>
+	{% endif %}
+
+	<h1>Notes</h1>
+	{% if notes %}
+		<table border=1 cellspacing=0 cellpadding=3>
+			<thead>
+				<td>id</td>
+				<td>title</td>
+				<td>rating</td>
+				<td>private</td>
+				<td>user</td>
+				<td>date</td>
+				<td>text</td>
+				<td>notes</td>
+				<td>links</td>
+			</thead>
+			<tbody>
+				{% for note in notes %}
+					<tr>
+						<td>{{ note.id }}</td>
+						<td>{{ note.title }}</td>
+						<td>{{ note.rating }}</td>
+						<td>{{ note.private }}</td>
+						<td>{{ note.user }}</td>
+						<td>{{ note.date }}</td>
+						<td>{{ note.text }}</td>
+						<td>
+							{% if note.notes %}
+								{{ note.notes.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if note.links %}
+								{{ note.links.all|length }}
+							{% endif %}
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	{% else %}
+		<p>No notes are available.</p>
+	{% endif %}
+
+	<h1>Links</h1>
+	{% if links %}
+		<table border=1 cellspacing=0 cellpadding=3>
+			<thead>
+				<td>id</td>
+				<td>title</td>
+				<td>rating</td>
+				<td>private</td>
+				<td>user</td>
+				<td>date</td>
+				<td>url</td>
+				<td>notes</td>
+				<td>links</td>
+			</thead>
+			<tbody>
+				{% for link in links %}
+					<tr>
+						<td>{{ link.id }}</td>
+						<td>{{ link.title }}</td>
+						<td>{{ link.rating }}</td>
+						<td>{{ link.private }}</td>
+						<td>{{ link.user }}</td>
+						<td>{{ link.date }}</td>
+						<td>{{ link.url }}</td>
+						<td>
+							{% if link.links %}
+								{{ link.links.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if link.links %}
+								{{ link.links.all|length }}
+							{% endif %}
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	{% else %}
+		<p>No notes are available.</p>
 	{% endif %}
 {% endblock %}
