--- a/templates/dada/index.html
+++ b/templates/dada/index.html
@@ -12,7 +12,7 @@
 	<h1>Items</h1>
 	{% if items %}
 		<table border=1 cellspacing=0 cellpadding=3>
-			<thead>
+			<thead style="font-weight: bold">
 				<td>id</td>
 				<td>title</td>
 				<td>rating</td>
@@ -21,13 +21,18 @@
 				<td>date</td>
 				<td>notes</td>
 				<td>links</td>
-			</thead>
+				<td></td>
+			</thead style="font-weight: bold">
 			<tbody>
 				{% for item in items %}
 					<tr>
 						<td>{{ item.id }}</td>
 						<td>{{ item.title }}</td>
-						<td>{{ item.rating }}</td>
+						<td>
+							<img src="/static/icons/thumb_down.png" border="0" style="vertical-align: middle" />
+							{{ item.rating }}
+							<img src="/static/icons/thumb_up.png" border="0" style="vertical-align: middle" />
+						</td>
 						<td>{{ item.private }}</td>
 						<td>{{ item.user }}</td>
 						<td>{{ item.date }}</td>
@@ -41,6 +46,18 @@
 								{{ item.links.all|length }}
 							{% endif %}
 						</td>
+						<td>
+							{% for note in item.notes.all %}
+								<a href="/note/{{ note.id }}">
+									<img src="/static/icons/note.png" alt="{{ note.title }}" title="{{ note.title }}" border="0" style="vertical-align: middle" />
+								</a>
+							{% endfor %}
+							{% for link in item.links.all %}
+								<a href="/link/{{ link.id }}">
+									<img src="/static/icons/link.png" alt="{{ link.title }}" title="{{ link.title }}" border="0" style="vertical-align: middle" />
+								</a>
+							{% endfor %}
+						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -52,7 +69,7 @@
 	<h1>Tasks</h1>
 	{% if tasks %}
 		<table border=1 cellspacing=0 cellpadding=3>
-			<thead>
+			<thead style="font-weight: bold">
 				<td>id</td>
 				<td>title</td>
 				<td>rating</td>
@@ -64,7 +81,7 @@
 				<td>notes</td>
 				<td>links</td>
 				<td>children</td>
-			</thead>
+			</thead style="font-weight: bold">
 			<tbody>
 				{% for task in tasks %}
 					<tr>
@@ -100,7 +117,7 @@
 	<h1>Events</h1>
 	{% if events %}
 		<table border=1 cellspacing=0 cellpadding=3>
-			<thead>
+			<thead style="font-weight: bold">
 				<td>id</td>
 				<td>title</td>
 				<td>rating</td>
@@ -112,7 +129,7 @@
 				<td>notes</td>
 				<td>links</td>
 				<td>children</td>
-			</thead>
+			</thead style="font-weight: bold">
 			<tbody>
 				{% for event in events %}
 					<tr>
@@ -150,7 +167,7 @@
 	<h1>Notes</h1>
 	{% if notes %}
 		<table border=1 cellspacing=0 cellpadding=3>
-			<thead>
+			<thead style="font-weight: bold">
 				<td>id</td>
 				<td>title</td>
 				<td>rating</td>
@@ -160,7 +177,8 @@
 				<td>text</td>
 				<td>notes</td>
 				<td>links</td>
-			</thead>
+				<td>item</td>
+			</thead style="font-weight: bold">
 			<tbody>
 				{% for note in notes %}
 					<tr>
@@ -181,6 +199,11 @@
 								{{ note.links.all|length }}
 							{% endif %}
 						</td>
+						<td>
+							{% if note.item %}
+								{{ note.item.id }}
+							{% endif %}
+						</td>
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -192,7 +215,7 @@
 	<h1>Links</h1>
 	{% if links %}
 		<table border=1 cellspacing=0 cellpadding=3>
-			<thead>
+			<thead style="font-weight: bold">
 				<td>id</td>
 				<td>title</td>
 				<td>rating</td>
@@ -202,7 +225,8 @@
 				<td>url</td>
 				<td>notes</td>
 				<td>links</td>
-			</thead>
+				<td>item</td>
+			</thead style="font-weight: bold">
 			<tbody>
 				{% for link in links %}
 					<tr>
@@ -221,6 +245,11 @@
 						<td>
 							{% if link.links %}
 								{{ link.links.all|length }}
+							{% endif %}
+						</td>
+						<td>
+							{% if link.item %}
+								{{ link.item.id }}
 							{% endif %}
 						</td>
 					</tr>
