--- a/trunk/templates/dada/base.html
+++ b/trunk/templates/dada/base.html
@@ -14,7 +14,7 @@
 <body>
 	<div style="background: #414950">
 		<img src="/static/images/pastiche_128.png" alt="pastiche" align="middle"/>
-		<font style="font-size: x-large; color: #ffffff; font-weight: bold; text-align=center">{% block header %} header {% endblock %}</font>
+		<font style="font-size: x-large; color: #ffffff; font-weight: bold; text-align=center">{% block heading %} heading {% endblock %}</font>
 	</div>
 	<div align="right">
 		<a href="/admin">admin</a>
